kubernetes/qbittorrent/overlays/movies-4k/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent-movies-4k
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: qbittorrent
    app.kubernetes.io/instance: movies-4k
