kubernetes/qbittorrent/overlays/movies-4k/deployment-node-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-r6x-28q
